Add exercise on DAA method comparison

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -323,7 +323,8 @@ function. We see that both clinical status and age explain more than 10% of the
 variance, but only age shows statistical significance.
 
 ```{r rda-permanova-res}
-rda_info$permanova
+rda_info$permanova %>%
+  knitr::kable()
 ```
 
 To ensure that the homogeneity assumption holds, we retrieve the corresponding
@@ -331,7 +332,8 @@ information from the results of RDA. In this case, none of the p-values is lower
 than the significance threshold, and thus homogeneity is observed.
 
 ```{r rda-homogeneity-res}
-rda_info$homogeneity
+rda_info$homogeneity %>%
+  knitr::kable()
 ```
 
 Next, we proceed to visualize the weight and significance of each variable on
