--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -616,7 +616,7 @@ Here, we conduct DAA with identical parameters as in the
 [previous exercise](#control-daa-confounders), but with a different method,
 namely ZicoSeq. We aim to compare the results between these two methods and draw better informed conclusions from such comparative approach.
 
-1. Import the mia and MicrobiomeStat packages, load peerj13075 with `data` and
+1. Import the mia and GUniFrac packages, load peerj13075 with `data` and
    store it into a variable named `tse`.
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
    perform both operations in one go with `subsetByPrevalentTaxa` by specifying
