--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -54,6 +54,7 @@ To run the examples in this chapter, the following packages should be imported:
 * vegan: ecological distances
 * ggplot2: plotting
 * patchwork: combining plots
+* dplyr: pipe operator
 
 ```{r betadiv-packages, include = FALSE}
 library(mia)
@@ -61,6 +62,7 @@ library(scater)
 library(vegan)
 library(ggplot2)
 library(patchwork)
+library(dplyr)
 ```
 
 ## Unsupervised ordination {#unsupervised-ordination}
