--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -185,7 +185,7 @@ Usefuls functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnam
 ### Importing data
 
 Raw data of different types can be imported as a TreeSE with a number of
-functions explained in chapter \@ref(#import-from-file). You can also check the
+functions explained in chapter \@ref(import-from-file). You can also check the
 [function reference in the mia package](https://microbiome.github.io/mia/reference/index.html).
 
 1. Get familiar with the
@@ -318,7 +318,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 1. Import the mia package, load peerj13075 with `data` and store it into a
    variable named `tse`.
 2. Transform the counts assay into relative abundances with `transformAssay` and
-   store it into the TreeSE as an assay named `relabund` (see chapter \ref(assay-transform)).
+   store it into the TreeSE as an assay named `relabund` (see chapter \@ref(assay-transform)).
 3. Similarly, perform a clr transformation on the counts assay with a `pseudocount`
    of 1 and add it to the TreeSE as a new assay.
 4. List the available assays by name with `assays`.
