Add exercises on DAA and polish beta diversity and DAA chapters (#336)
* Add exercise on DAA method comparison

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -54,6 +54,7 @@ To run the examples in this chapter, the following packages should be imported:
 * vegan: ecological distances
 * ggplot2: plotting
 * patchwork: combining plots
+* dplyr: pipe operator
 
 ```{r betadiv-packages, include = FALSE}
 library(mia)
@@ -61,6 +62,7 @@ library(scater)
 library(vegan)
 library(ggplot2)
 library(patchwork)
+library(dplyr)
 ```
 
 ## Unsupervised ordination {#unsupervised-ordination}
@@ -323,7 +325,8 @@ function. We see that both clinical status and age explain more than 10% of the
 variance, but only age shows statistical significance.
 
 ```{r rda-permanova-res}
-rda_info$permanova
+rda_info$permanova %>%
+  knitr::kable()
 ```
 
 To ensure that the homogeneity assumption holds, we retrieve the corresponding
@@ -331,7 +334,8 @@ information from the results of RDA. In this case, none of the p-values is lower
 than the significance threshold, and thus homogeneity is observed.
 
 ```{r rda-homogeneity-res}
-rda_info$homogeneity
+rda_info$homogeneity %>%
+  knitr::kable()
 ```
 
 Next, we proceed to visualize the weight and significance of each variable on
