--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -47,23 +47,6 @@ Reduction (UMAP), whereas the latter is mainly represented by distance-based
 Redundancy Analysis (dbRDA). We will first discuss unsupervised ordination
 methods and then proceed to supervised ones.
 
-To run the examples in this chapter, the following packages should be imported:
-
-* mia: microbiome analysis framework
-* scater: plotting reduced dimensions
-* vegan: ecological distances
-* ggplot2: plotting
-* patchwork: combining plots
-* dplyr: pipe operator
-
-```{r betadiv-packages, include = FALSE}
-library(mia)
-library(scater)
-library(vegan)
-library(ggplot2)
-library(patchwork)
-library(dplyr)
-```
 
 ## Unsupervised ordination {#unsupervised-ordination}
 
@@ -75,10 +58,9 @@ demonstration we will analyse beta diversity in GlobalPatterns, and observe the
 variation between stool samples and those with a different origin.
 
 ```{r prep-tse}
-# Example data
+# Load mia and import sample dataset
+library(mia)
 data("GlobalPatterns", package = "mia")
-
-# Data matrix (features x samples)
 tse <- GlobalPatterns
 
 # some beta diversity metrics are usually applied to relative abundances
@@ -106,6 +88,9 @@ dimensions via an ordination method, the results of which can be stored in the
 and `runNMDS` functions.
 
 ```{r runMDS}
+# Load package to plot reducedDim
+library(scater)
+
 # Perform PCoA
 tse <- runMDS(tse,
               FUN = vegan::vegdist,
@@ -135,31 +120,40 @@ p <- p + labs(x = paste("PCoA 1 (", round(100 * rel_eig[[1]], 1), "%", ")", sep 
 p
 ```
 
-With additional tools from the ggplot2 package, ordination methods can be 
-compared to find similarities between them or select the most suitable one to
-visualize beta diversity in the light of the research question.
+Multiple ordination plots are combined into a multi-panel plot with the
+patchwork package, so that different methods can be compared to find similarities
+between them or select the most suitable one to visualize beta diversity in the
+light of the research question.
 
 ```{r plot-mds-nmds-comparison, fig.cap = "Comparison of MDS and NMDS plots based on the Bray-Curtis or euclidean distances on the GlobalPattern dataset."}
+# Run MDS on counts assay with Euclidean distances
 tse <- runMDS(tse,
               FUN = vegan::vegdist,
               name = "MDS_euclidean",
               method = "euclidean",
               assay.type = "counts")
 
+# Run NMDS on counts assay with Bray-Curtis distances
 tse <- runNMDS(tse,
                FUN = vegan::vegdist,
                name = "NMDS_BC")
 
+# Run NMDS on counts assay with Euclidean distances
 tse <- runNMDS(tse,
                FUN = vegan::vegdist,
                name = "NMDS_euclidean",
                method = "euclidean")
 
+# Generate plots for all 4 reducedDims
 plots <- lapply(c("PCoA_BC", "MDS_euclidean", "NMDS_BC", "NMDS_euclidean"),
                 plotReducedDim,
                 object = tse,
                 colour_by = "Group")
 
+# Load package for multi-panel plotting
+library(patchwork)
+
+# Generate multi-panel plot
 ((plots[[1]] | plots[[2]]) / (plots[[3]] | plots[[4]])) +
   plot_layout(guides = "collect")
 ```
@@ -240,6 +234,9 @@ would report relative stress, which varies in the unit interval and is better
 if smaller. This can be calculated as shown below.
 
 ```{r relstress}
+# Load vegan package
+library(vegan)
+
 # Quantify dissimilarities in the original feature space
 x <- assay(tse, "relabundance") # Pick relabunance assay separately
 d0 <- as.matrix(vegdist(t(x), "bray"))
@@ -282,10 +279,10 @@ them. The result shows how much each covariate affects beta diversity. The table
 below illustrates the relation between supervised and unsupervised ordination
 methods.
 
-|                           | supervised ordination  | unsupervised ordination  |
-|:-------------------------:|:----------------------:|:------------------------:|
-| Euclidean distance        | RDA                    | PCA                      |
-| non-Euclidean distance    | dbRDA                  | PCoA                     |
+|                           | supervised ordination  | unsupervised ordination  
+|:-------------------------:|:----------------------:|:------------------------:
+| Euclidean distance        | RDA                    | PCA                      
+| non-Euclidean distance    | dbRDA                  | PCoA                     
 
 We demonstrate the usage of dbRDA with the enterotype dataset, where samples
 correspond to patients. The colData contains the clinical status of each patient
@@ -325,7 +322,7 @@ function. We see that both clinical status and age explain more than 10% of the
 variance, but only age shows statistical significance.
 
 ```{r rda-permanova-res}
-rda_info$permanova %>%
+rda_info$permanova |>
   knitr::kable()
 ```
 
@@ -334,79 +331,20 @@ information from the results of RDA. In this case, none of the p-values is lower
 than the significance threshold, and thus homogeneity is observed.
 
 ```{r rda-homogeneity-res}
-rda_info$homogeneity %>%
+rda_info$homogeneity |>
   knitr::kable()
 ```
 
 Next, we proceed to visualize the weight and significance of each variable on
 the similarity between samples with an RDA plot, which can be generated with
-the following custom function.
+the `plotRDA` function from the miaViz package.
 
 ```{r plot-rda}
 # Load packages for plotting function
-library(stringr)
-library(ggord)
+library(miaViz)
 
-rda <- attr(reducedDim(tse2, "RDA"), "rda")
-
-# Covariates that are being analyzed
-variable_names <- c("ClinicalStatus", "Gender", "Age")
-
-# Since na.exclude was used, if there were rows missing information, they were 
-# dropped off. Subset coldata so that it matches with rda.
-coldata <- colData(tse2)[ rownames(rda$CCA$wa), ]
-
-# Adjust names
-# Get labels of vectors
-vec_lab_old <- rownames(rda$CCA$biplot)
-
-# Loop through vector labels
-vec_lab <- sapply(vec_lab_old, FUN = function(name){
-    # Get the variable name
-    variable_name <- variable_names[ str_detect(name, variable_names) ]
-    # If the vector label includes also group name
-    if( !any(name %in% variable_names) ){
-        # Get the group names
-        group_name <- unique( coldata[[variable_name]] )[ 
-        which( paste0(variable_name, unique( coldata[[variable_name]] )) == name ) ]
-        # Modify vector so that group is separated from variable name
-        new_name <- paste0(variable_name, " \U2012 ", group_name)
-    } else{
-        new_name <- name
-    }
-    # Add percentage how much this variable explains, and p-value
-    new_name <- expr(paste(!!new_name, " (", 
-                           !!format(round( rda_info$permanova[variable_name, "Explained variance"]*100, 1), nsmall = 1), 
-                           "%, ",italic("P"), " = ", 
-                           !!gsub("0\\.","\\.", format(round( rda_info$permanova[variable_name, "Pr(>F)"], 3), 
-                                                       nsmall = 3)), ")"))
-
-    return(new_name)
-})
-# Add names
-names(vec_lab) <- vec_lab_old
-
-# Create labels for axis
-xlab <- paste0("RDA1 (", format(round( rda$CCA$eig[[1]]/rda$CCA$tot.chi*100, 1), nsmall = 1 ), "%)")
-ylab <- paste0("RDA2 (", format(round( rda$CCA$eig[[2]]/rda$CCA$tot.chi*100, 1), nsmall = 1 ), "%)")
-
-# Create a plot        
-plot <- ggord(rda, grp_in = coldata[["ClinicalStatus"]], vec_lab = vec_lab,
-              alpha = 0.5,
-              size = 4, addsize = -4,
-              #ext= 0.7, 
-              txt = 3.5, repel = TRUE, 
-              #coord_fix = FALSE
-          ) + 
-    # Adjust titles and labels
-    guides(colour = guide_legend("ClinicalStatus"),
-           fill = guide_legend("ClinicalStatus"),
-           group = guide_legend("ClinicalStatus"),
-           shape = guide_legend("ClinicalStatus"),
-           x = guide_axis(xlab),
-           y = guide_axis(ylab)) +
-    theme( axis.title = element_text(size = 10) )
-plot
+# Generate RDA plot coloured by clinical status
+plotRDA(tse2, "RDA", colour_by = "ClinicalStatus")
 ```
 
 From the plot above, we can see that only age significantly describes
