Fix rmd table in beta diversity chapter

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -279,10 +279,10 @@ them. The result shows how much each covariate affects beta diversity. The table
 below illustrates the relation between supervised and unsupervised ordination
 methods.
 
-|                           | supervised ordination  | unsupervised ordination  
-|:-------------------------:|:----------------------:|:------------------------:
-| Euclidean distance        | RDA                    | PCA                      
-| non-Euclidean distance    | dbRDA                  | PCoA                     
+|                          | supervised ordination  | unsupervised ordination  |
+|:------------------------:|:----------------------:|:------------------------:|
+| Euclidean distance       | RDA                    | PCA                      |
+| non-Euclidean distance   | dbRDA                  | PCoA                     |
 
 We demonstrate the usage of dbRDA with the enterotype dataset, where samples
 correspond to patients. The colData contains the clinical status of each patient
