Fix miaTime missing error

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -68,7 +68,8 @@ Let us load example data and rename it as tse.
 
 ```{r}
 library(mia)
-data(hitchip1006, package="miaTime")
+library(miaTime)
+data("hitchip1006", package = "miaTime")
 tse <- hitchip1006
 ```
 
