--- a/book.bib
+++ b/book.bib
@@ -1397,49 +1397,178 @@ https://github.com/thomasp85/patchwork},
 }
 
 
+@article{schafer2005shrinkage,
+author = {Sch{\"a}fer, Juliane and Strimmer, Korbinian},
+doi = {10.2202/1544-6115.1175},
+journal = {Statistical Applications in Genetics and Molecular Biology},
+number = {1},
+pages = {1--30},
+title = {{A shrinkage approach to large-scale covariance matrix estimation and implications for functional genomics}},
+volume = {4},
+year = {2005}
+}
+
+
 
 @article{yoon2019microbial,
-  title={Microbial networks in SPRING-Semi-parametric rank-based correlation and partial correlation estimation for quantitative microbiome data},
-  author={Yoon, Grace and Gaynanova, Irina and M{\"u}ller, Christian L},
-  journal={Frontiers in genetics},
-  volume={10},
-  pages={516},
-  year={2019},
-  publisher={Frontiers Media SA}
+  title = {{Microbial networks in SPRING - Semi-parametric rank-based correlation and partial correlation estimation for quantitative microbiome data}},
+  author = {Yoon, Grace and Gaynanova, Irina and M{\"u}ller, Christian L},
+  journal = {Frontiers in Genetics},
+  volume = {10},
+  pages = {516},
+  year = {2019},
+  doi = {10.3389/fgene.2019.00516}
 }
 
 
 @article{peschel2021netcomi,
     author = {Peschel, Stefanie and M{\"{u}}ller, Christian L and von Mutius, Erika and Boulesteix, Anne-Laure and Depner, Martin},
-    title = "{NetCoMi: network construction and comparison for microbiome data in R}",
+    title = {{NetCoMi: network construction and comparison for microbiome data in R}},
     journal = {Briefings in Bioinformatics},
     volume = {22},
     number = {4},
     pages = {bbaa290},
     year = {2021},
-    doi = {10.1093/bib/bbaa290},
-    url = {https://doi.org/10.1093/bib/bbaa290}
+    doi = {10.1093/bib/bbaa290}
 }
 
 
 @article{potbhare2022skin,
-  title={Skin microbiota diversity among genetically unrelated individuals of Indian origin},
-  author={Potbhare, Renuka and RaviKumar, Ameeta and Munukka, Eveliina and Lahti, Leo and Ashma, Richa},
-  journal={PeerJ},
-  volume={10},
-  pages={e13075},
-  year={2022},
-  publisher={PeerJ Inc.}
+  title = {Skin microbiota diversity among genetically unrelated individuals of Indian origin},
+  author = {Potbhare, Renuka and RaviKumar, Ameeta and Munukka, Eveliina and Lahti, Leo and Ashma, Richa},
+  journal = {PeerJ},
+  volume = {10},
+  pages = {e13075},
+  year = {2022},
+  doi = {10.7717/peerj.13075}
 }
+
+
+@article{vanDongen2012metric,
+arxivId = {1208.3145},
+author = {van Dongen, Stijn and Enright, Anton J.},
+eprint = {1208.3145},
+pages = {2--6},
+title = {{Metric distances derived from cosine similarity and Pearson and Spearman correlations}},
+url = {http://arxiv.org/abs/1208.3145},
+volume = {2},
+year = {2012}
+}
+
 
 
 @article{ullmann2023over,
-  title={Over-optimism in unsupervised microbiome analysis: Insights from network learning and clustering},
-  author={Ullmann, Theresa and Peschel, Stefanie and Finger, Philipp and M{\"u}ller, Christian L and Boulesteix, Anne-Laure},
-  journal={PLoS Computational Biology},
-  volume={19},
-  number={1},
-  pages={e1010820},
-  year={2023},
-  publisher={Public Library of Science San Francisco, CA USA}
+  title = {Over-optimism in unsupervised microbiome analysis: Insights from network learning and clustering},
+  author = {Ullmann, Theresa and Peschel, Stefanie and Finger, Philipp and M{\"u}ller, Christian L and Boulesteix, Anne-Laure},
+  journal = {PLoS Computational Biology},
+  volume = {19},
+  number = {1},
+  pages = {e1010820},
+  year = {2023},
+  doi = {10.1371/journal.pcbi.1010820}
 }
+
+
+@article{meinshausen2006high,
+author = {Meinshausen, Nicolai and B{\"{u}}hlmann, Peter},
+doi = {10.1214/009053606000000281},
+journal = {Annals of Statistics},
+number = {3},
+pages = {1436--1462},
+title = {{High-dimensional graphs and variable selection with the Lasso}},
+volume = {34},
+year = {2006}
+}
+
+
+@article{friedman2008sparse,
+author = {Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
+doi = {10.1093/BIOSTATISTICS/KXM045},
+issn = {1468-4357},
+journal = {Biostatistics (Oxford, England)},
+month = {jul},
+number = {3},
+pages = {432--441},
+publisher = {Biostatistics},
+title = {{Sparse inverse covariance estimation with the graphical lasso}},
+volume = {9},
+year = {2008}
+}
+
+
+@article{lovell2015proportionality,
+author = {Lovell, David and Pawlowsky-Glahn, Vera and Egozcue, Juan Jos{\'{e}} and Marguerat, Samuel and B{\"{a}}hler, J{\"{u}}rg},
+doi = {10.1371/journal.pcbi.1004075},
+issn = {15537358},
+journal = {PLoS Computational Biology},
+number = {3},
+pages = {1--12},
+pmid = {25775355},
+publisher = {Public Library of Science},
+title = {{Proportionality: A Valid Alternative to Correlation for Relative Data}},
+volume = {11},
+year = {2015}
+}
+
+
+@article{liu2010stability,
+author = {Liu, Han and Roeder, Kathryn and Wasserman, Larry},
+doi = {10.48550/arxiv.1006.3316},
+journal = {Advances in Neural Information Processing Systems 23: 24th Annual Conference on Neural Information Processing Systems 2010, NIPS 2010},
+title = {{Stability Approach to Regularization Selection (StARS) for High Dimensional Graphical Models}},
+year = {2010}
+}
+
+
+@article{badri2020shrinkage,
+author = {Badri, Michelle and Kurtz, Zachary D. and Bonneau, Richard and M{\"{u}}ller, Christian L.},
+doi = {10.1093/NARGAB/LQAA100},
+issn = {26319268},
+journal = {NAR Genomics and Bioinformatics},
+month = {dec},
+number = {4},
+publisher = {Oxford Academic},
+title = {{Shrinkage improves estimation of microbial associations under different normalization methods}},
+volume = {2},
+year = {2020}
+}
+
+
+@article{fang2015cclasso,
+author = {Fang, Huaying and Huang, Chengcheng and Zhao, Hongyu and Deng, Minghua},
+doi = {10.1093/bioinformatics/btv349},
+journal = {Bioinformatics},
+number = {19},
+pages = {3172--3180},
+title = {{CCLasso: Correlation inference for compositional data through Lasso}},
+volume = {31},
+year = {2015}
+}
+
+
+@article{faust2012microbial,
+author = {Faust, Karoline and Sathirapongsasuti, J. Fah and Izard, Jacques and Segata, Nicola and Gevers, Dirk and Raes, Jeroen and Huttenhower, Curtis},
+doi = {10.1371/journal.pcbi.1002606},
+journal = {PLoS Computational Biology},
+month = {jul},
+number = {7},
+pages = {e1002606},
+publisher = {Public Library of Science},
+title = {{Microbial Co-occurrence Relationships in the Human Microbiome}},
+volume = {8},
+year = {2012}
+}
+
+
+@article{fang2017gcoda,
+author = {Fang, H and Huang, C and Zhao, H and Deng, M},
+doi = {10.1089/cmb.2017.0054},
+issn = {10665277},
+journal = {Journal of Computational Biology},
+number = {7},
+pages = {699--708},
+title = {{gCoda: Conditional Dependence Network Inference for Compositional Data}},
+volume = {24},
+year = {2017}
+}
+
