Implement pseudocount = TRUE and minor fixes

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -72,7 +72,7 @@ tse <- transformAssay(tse,
 tse <- transformAssay(tse,
                       assay.type = "relabundance",
                       method = "clr",
-                      pseudocount = 1)
+                      pseudocount = TRUE)
 
 # Add group information Feces yes/no
 tse$Group <- tse$SampleType == "Feces"
@@ -143,17 +143,15 @@ tse <- runNMDS(tse,
 # Run MDS on clr assay with Aitchison distances
 tse <- runMDS(tse,
               FUN = vegan::vegdist,
-              method = "aitchison",
+              method = "euclidean",
               assay.type = "clr",
-              pseudocount = 1,
               name = "MDS_aitchison")
 
-# Run NMDS on clr assay with Aitchison distances
+# Run NMDS on clr assay with Euclidean distances
 tse <- runNMDS(tse,
                FUN = vegan::vegdist,
-               method = "aitchison",
+               method = "euclidean",
                assay.type = "clr",
-               pseudocount = 1,
                name = "NMDS_aitchison")
 ```
 
@@ -167,7 +165,7 @@ light of the research question.
 library(patchwork)
 
 # Generate plots for all 4 reducedDims
-plots <- lapply(c("MDS_bray", "NMDS_aitchison",
+plots <- lapply(c("MDS_bray", "MDS_aitchison",
                   "NMDS_bray", "NMDS_aitchison"),
                 plotReducedDim,
                 object = tse,
@@ -302,7 +300,7 @@ methods.
 |                          | supervised ordination  | unsupervised ordination  |
 |:------------------------:|:----------------------:|:------------------------:|
 | Euclidean distance       | RDA                    | PCA                      |
-| non-Euclidean distance   | dbRDA                  | PCoA                     |
+| non-Euclidean distance   | dbRDA                  | PCoA/MDS, NMDS and UMAP  |
 
 We demonstrate the usage of dbRDA with the enterotype dataset, where samples
 correspond to patients. The colData contains the clinical status of each patient
