Update network learning chapter
Make requested changes
Remove sections on network comparison

--- a/book.bib
+++ b/book.bib
@@ -1476,7 +1476,7 @@ year = {2012}
 @article{ullmann2023over,
   title = {Over-optimism in unsupervised microbiome analysis: Insights from network learning and clustering},
   author = {Ullmann, Theresa and Peschel, Stefanie and Finger, Philipp and M{\"u}ller, Christian L and Boulesteix, Anne-Laure},
-  journal = {PLoS Computational Biology},
+  journal = {{PLoS Computational Biology}},
   volume = {19},
   number = {1},
   pages = {e1010820},
@@ -1516,7 +1516,7 @@ year = {2008}
 author = {Lovell, David and Pawlowsky-Glahn, Vera and Egozcue, Juan Jos{\'{e}} and Marguerat, Samuel and B{\"{a}}hler, J{\"{u}}rg},
 doi = {10.1371/journal.pcbi.1004075},
 issn = {15537358},
-journal = {PLoS Computational Biology},
+journal = {{PLoS Computational Biology}},
 number = {3},
 pages = {1--12},
 pmid = {25775355},
@@ -1565,7 +1565,7 @@ year = {2015}
 @article{faust2012microbial,
 author = {Faust, Karoline and Sathirapongsasuti, J. Fah and Izard, Jacques and Segata, Nicola and Gevers, Dirk and Raes, Jeroen and Huttenhower, Curtis},
 doi = {10.1371/journal.pcbi.1002606},
-journal = {PLoS Computational Biology},
+journal = {{PLoS Computational Biology}},
 month = {jul},
 number = {7},
 pages = {e1002606},
@@ -1580,7 +1580,7 @@ year = {2012}
 author = {Fang, H and Huang, C and Zhao, H and Deng, M},
 doi = {10.1089/cmb.2017.0054},
 issn = {10665277},
-journal = {Journal of Computational Biology},
+journal = {{Journal of Computational Biology}},
 number = {7},
 pages = {699--708},
 title = {{gCoda: Conditional Dependence Network Inference for Compositional Data}},
