--- a/book.bib
+++ b/book.bib
@@ -1418,7 +1418,7 @@ https://github.com/thomasp85/patchwork},
 @article{schafer2005shrinkage,
 author = {Sch{\"a}fer, Juliane and Strimmer, Korbinian},
 doi = {10.2202/1544-6115.1175},
-journal = {Statistical Applications in Genetics and Molecular Biology},
+journal = {{Statistical Applications in Genetics and Molecular Biology}},
 number = {1},
 pages = {1--30},
 title = {{A shrinkage approach to large-scale covariance matrix estimation and implications for functional genomics}},
@@ -1430,7 +1430,7 @@ year = {2005}
 @article{yoon2019microbial,
   title = {{Microbial networks in SPRING - Semi-parametric rank-based correlation and partial correlation estimation for quantitative microbiome data}},
   author = {Yoon, Grace and Gaynanova, Irina and M{\"u}ller, Christian L},
-  journal = {Frontiers in Genetics},
+  journal = {{Frontiers in Genetics}},
   volume = {10},
   pages = {516},
   year = {2019},
@@ -1441,7 +1441,7 @@ year = {2005}
 @article{peschel2021netcomi,
     author = {Peschel, Stefanie and M{\"{u}}ller, Christian L and von Mutius, Erika and Boulesteix, Anne-Laure and Depner, Martin},
     title = {{NetCoMi: network construction and comparison for microbiome data in R}},
-    journal = {Briefings in Bioinformatics},
+    journal = {{Briefings in Bioinformatics}},
     volume = {22},
     number = {4},
     pages = {bbaa290},
@@ -1453,7 +1453,7 @@ year = {2005}
 @article{potbhare2022skin,
   title = {Skin microbiota diversity among genetically unrelated individuals of Indian origin},
   author = {Potbhare, Renuka and RaviKumar, Ameeta and Munukka, Eveliina and Lahti, Leo and Ashma, Richa},
-  journal = {PeerJ},
+  journal = {{PeerJ}},
   volume = {10},
   pages = {e13075},
   year = {2022},
@@ -1468,6 +1468,7 @@ eprint = {1208.3145},
 pages = {2--6},
 title = {{Metric distances derived from cosine similarity and Pearson and Spearman correlations}},
 url = {http://arxiv.org/abs/1208.3145},
+journal={{arXiv preprint}}
 volume = {2},
 year = {2012}
 }
@@ -1488,7 +1489,7 @@ year = {2012}
 @article{meinshausen2006high,
 author = {Meinshausen, Nicolai and B{\"{u}}hlmann, Peter},
 doi = {10.1214/009053606000000281},
-journal = {Annals of Statistics},
+journal = {{Annals of Statistics}},
 number = {3},
 pages = {1436--1462},
 title = {{High-dimensional graphs and variable selection with the Lasso}},
@@ -1501,7 +1502,7 @@ year = {2006}
 author = {Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
 doi = {10.1093/BIOSTATISTICS/KXM045},
 issn = {1468-4357},
-journal = {Biostatistics (Oxford, England)},
+journal = {{Biostatistics (Oxford, England)}},
 month = {jul},
 number = {3},
 pages = {432--441},
@@ -1520,7 +1521,7 @@ journal = {{PLoS Computational Biology}},
 number = {3},
 pages = {1--12},
 pmid = {25775355},
-publisher = {Public Library of Science},
+publisher = {{Public Library of Science}},
 title = {{Proportionality: A Valid Alternative to Correlation for Relative Data}},
 volume = {11},
 year = {2015}
@@ -1530,7 +1531,7 @@ year = {2015}
 @article{liu2010stability,
 author = {Liu, Han and Roeder, Kathryn and Wasserman, Larry},
 doi = {10.48550/arxiv.1006.3316},
-journal = {Advances in Neural Information Processing Systems 23: 24th Annual Conference on Neural Information Processing Systems 2010, NIPS 2010},
+journal = {{Advances in Neural Information Processing Systems}},
 title = {{Stability Approach to Regularization Selection (StARS) for High Dimensional Graphical Models}},
 year = {2010}
 }
@@ -1540,10 +1541,10 @@ year = {2010}
 author = {Badri, Michelle and Kurtz, Zachary D. and Bonneau, Richard and M{\"{u}}ller, Christian L.},
 doi = {10.1093/NARGAB/LQAA100},
 issn = {26319268},
-journal = {NAR Genomics and Bioinformatics},
+journal = {{NAR Genomics and Bioinformatics}},
 month = {dec},
 number = {4},
-publisher = {Oxford Academic},
+publisher = {{Oxford Academic}},
 title = {{Shrinkage improves estimation of microbial associations under different normalization methods}},
 volume = {2},
 year = {2020}
@@ -1569,7 +1570,7 @@ journal = {{PLoS Computational Biology}},
 month = {jul},
 number = {7},
 pages = {e1002606},
-publisher = {Public Library of Science},
+publisher = {{Public Library of Science}},
 title = {{Microbial Co-occurrence Relationships in the Human Microbiome}},
 volume = {8},
 year = {2012}
@@ -1611,3 +1612,156 @@ year = {2017}
 }
 
 
+@article{lichtblau2017comparative,
+author = {Lichtblau, Yvonne and Zimmermann, Karin and Haldemann, Berit and Lenze, Dido and Hummel, Michael and Leser, Ulf},
+doi = {10.1093/bib/bbw061},
+journal = {{Briefings in Bioinformatics}},
+number = {5},
+pages = {837--850},
+title = {{Comparative assessment of differential network analysis methods}},
+volume = {18},
+year = {2017}
+}
+
+
+@article{jardim2019bionetstat,
+author = {Jardim, Vin{\'{i}}cius Carvalho and {De Siqueira Santos}, Suzana and Fujita, Andre and Buckeridge, Marcos Silveira},
+doi = {10.3389/fgene.2019.00594},
+journal = {{Frontiers in Genetics}},
+number = {JUN},
+pages = {1--13},
+title = {{BioNetStat: A tool for biological networks differential analysis}},
+volume = {10},
+year = {2019}
+}
+
+
+@article{he2019statistical,
+author = {He, Hao and Cao, Shaolong and gang Zhang, Ji and Shen, Hui and Wang, Yu Ping and wen Deng, Hong},
+doi = {10.1038/s41598-019-47362-7},
+journal = {{Scientific Reports}},
+month = {dec},
+number = {1},
+pages = {1--8},
+pmid = {31350445},
+publisher = {{Nature Publishing Group}},
+title = {{A Statistical Test for Differential Network Analysis Based on Inference of Gaussian Graphical Model}},
+volume = {9},
+year = {2019}
+}
+
+
+@article{yu2019new,
+author = {Yu, Danyang and Zhang, Zeyu and Glass, Kimberly and Su, Jessica and DeMeo, Dawn L. and Tantisira, Kelan and Weiss, Scott T. and Qiu, Weiliang},
+doi = {10.1038/s41598-019-40167-8},
+journal = {{Scientific Reports}},
+number = {1},
+pages = {1--12},
+pmid = {30837613},
+title = {{New Statistical Methods for Constructing Robust Differential Correlation Networks to characterize the interactions among microRNAs}},
+volume = {9},
+year = {2019}
+}
+
+
+@article{mckenzie2016dgca,
+author = {McKenzie, Andrew T. and Katsyv, Igor and Song, Won Min and Wang, Minghui and Zhang, Bin},
+doi = {10.1186/s12918-016-0349-1},
+journal = {{BMC Systems Biology}},
+number = {1},
+pages = {1--25},
+publisher = {{BMC Systems Biology}},
+title = {{DGCA: A comprehensive R package for Differential Gene Correlation Analysis}},
+volume = {10},
+year = {2016}
+}
+
+
+@article{siska2017differential,
+author = {Siska, Charlotte and Kechris, Katerina},
+doi = {10.1186/s13104-016-2331-9},
+journal = {{BMC Research Notes}},
+number = {1},
+pages = {1--9},
+pmid = {28103954},
+publisher = {{BioMed Central}},
+title = {{Differential correlation for sequencing data}},
+volume = {10},
+year = {2017}
+}
+
+
+@article{bhuva2019differential,
+author = {Bhuva, Dharmesh D. and Cursons, Joseph and Smyth, Gordon K. and Davis, Melissa J.},
+doi = {10.1186/S13059-019-1851-8},
+journal = {{Genome Biology}},
+month = {nov},
+number = {1},
+pmid = {31727119},
+publisher = {{BMC}},
+title = {{Differential co-expression-based detection of conditional relationships in transcriptional data: comparative analysis and application to breast cancer}},
+volume = {20},
+year = {2019}
+}
+
+
+@article{gill2010statistical,
+author = {Gill, Ryan and Datta, Somnath and Datta, Susmita},
+journal = {{BMC Bioinformatics}},
+number = {1},
+pages = {95},
+title = {{A statistical framework for differential network analysis from microarray data}},
+volume = {11},
+year = {2010}
+}
+
+
+@article{shojaie2021differential,
+author = {Shojaie, Ali},
+doi = {10.1002/WICS.1508},
+journal = {{Wiley Interdisciplinary Reviews: Computational Statistics}},
+month = {mar},
+number = {2},
+pages = {e1508},
+publisher = {{John Wiley & Sons, Ltd}},
+title = {{Differential network analysis: A statistical perspective}},
+volume = {13},
+year = {2021}
+}
+
+
+@incollection{fisher1970statistical,
+  title={Statistical methods for research workers},
+  author={Fisher, Ronald Aylmer},
+  booktitle={{Breakthroughs in statistics: Methodology and distribution}},
+  pages={66--70},
+  year={1970},
+  publisher={Springer}
+}
+
+
+@article{siska2016discordant,
+author = {Siska, Charlotte and Bowler, Russell and Kechris, Katerina},
+doi = {10.1093/bioinformatics/btv633},
+journal = {Bioinformatics},
+number = {5},
+pages = {690--696},
+title = {{The discordant method: A novel approach for differential correlation}},
+volume = {32},
+year = {2016},
+publisher={{Oxford University Press}}
+}
+
+
+@article{yaverouglu2014revealing,
+author = {Yavero{\u{g}}lu, {\"O}mer Nebil and Malod-Dognin, No{\"e}l and Davis, Darren and Levnajic, Zoran and Janjic, Vuk and Karapandza, Rasa and Stojmirovic, Aleksandar and Pr{\v{z}}ulj, Nata{\v{s}}a},
+doi = {10.1038/srep04547},
+journal = {{Scientific Reports}},
+month = {apr},
+number = {1},
+pages = {1--9},
+publisher = {{Nature Publishing Group}},
+title = {{Revealing the Hidden Language of Complex Networks}},
+volume = {4},
+year = {2014}
+}
