Replace pseudocount 1 with TRUE throughout book

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -127,7 +127,7 @@ p <- p + labs(x = paste("PCoA 1 (", round(100 * rel_eig[[1]], 1), "%", ")", sep 
 p
 ```
 
-A few combinations of beta diversity metrics and assay types are conventionally
+A few combinations of beta diversity metrics and assay types are tipically
 used. For instance, Bray-Curtis dissimilarity and Aitchison distance are often applied to the relative abundance and the clr assays, respectively. Besides
 **beta diversity metric** and **assay type**, the **PCoA algorithm** is also a variable that should be considered. Below, we show how the choice of these three
 factors can affect the resulting lower-dimensional data.
