Fix pseudocount bug

--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -194,7 +194,7 @@ mae[[2]] <- transformAssay(mae[[2]], assay.type = "nmr",
 # Transforming biomarker data with z-transform
 mae[[3]] <- transformAssay(mae[[3]], assay.type = "signals",
                            MARGIN = "features",
-                           method = "z", pseudocount = TRUE)
+                           method = "z", pseudocount = 1)
 
 # Removing assays no longer needed
 assay(mae[[1]], "counts") <- NULL
